@@ -49,14 +49,25 @@ before pass => sub {
                     $self->pass_extra_message('Unfortunately, by the time the proposition passed, the planet was no longer occupied.');
                 }
             }
-            else {
+            elsif ($parl) {
                 $parl->level($parl->level - 1);
-                $parl->efficiency($parl->efficiency - 25);
-                $parl->update;
+                if ($parl->level >= 1)
+                {
+                    $parl->spend_efficiency(120); # becomes 25%
+                    $parl->update;
+                    $self->station->add_news(49, sprintf('The parliament of %s suffered a malfunction today while trying to fire their BFG.', $self->station->name));
+                }
+                else
+                {
+                    $parl->demolish;
+                    $self->station->add_news(99, sprintf('The parliament of %s suffered a critical malfunction today while trying to fire their BFG.', $self->station->name));
+                }
                 $self->station->update;
 
-                $self->station->add_news(49, sprintf('The parliament of %s suffered a malfunction today while trying to fire their BFG.', $self->station->name));
                 $self->pass_extra_message('Unfortunately, by the time the proposition passed, the station no longer had sufficient resources to fire with.');
+            }
+            else {
+                $self->pass_extra_message('Unfortunately, by the time the proposition passed, there was no parliament to enact it.');
             }
         }
         else {
