@@ -5,6 +5,7 @@
  - Add: Fleet Lite
  - Mod: Sweepers adjusted for balance.
  - Fix: Most buildings should no longer ignore uni level.
+ - Add: Overheating Parliament does damage.
 
 3.0908:
  - Mod: trash_messages_where now defaults to not returning deleted message IDs.
